--- a/zed/settings.json
+++ b/zed/settings.json
@@ -1,4 +1,11 @@
 {
+  "assistant": {
+    "default_model": {
+      "provider": "zed.dev",
+      "model": "claude-3-5-sonnet-20240620"
+    },
+    "version": "2"
+  },
   "features": {
     "inline_completion_provider": "none"
   },
