--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,7 @@
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 # Options to make tmux more pleasant
 set -g mouse on
 set -g default-terminal "tmux-256color"
