--- a/helix/config.toml
+++ b/helix/config.toml
@@ -1,11 +1,11 @@
 theme = "catppuccin_mocha"
 
 [keys.normal]
-H = ":buffer-next"
-L = ":buffer-previous"
+H = "goto_previous_buffer"
+L = "goto_next_buffer"
 
 [keys.normal.space]
-e = ":run-shell-command switch-to-yazi"
+e = ":run-shell-command ~/.config/yazi/switch-to-yazi.sh"
 
 [editor]
 line-number = "relative"
