add lazygit to editor setup

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -6,6 +6,7 @@ L = "goto_next_buffer"
 
 [keys.normal.space]
 e = ":run-shell-command ~/.config/yazi/switch-to-yazi.sh"
+l = ":run-shell-command ~/.config/yazi/open-lazygit.sh"
 
 [editor]
 line-number = "relative"
