--- a/helix/config.toml
+++ b/helix/config.toml
@@ -12,6 +12,9 @@ l = ":run-shell-command ~/.config/yazi/open-lazygit.sh"
 line-number = "relative"
 bufferline = "always"
 
+completion-trigger-len = 0
+completion-timeout = 5
+
 rulers = [80]
 
 [editor.soft-wrap]
