--- a/helix/config.toml
+++ b/helix/config.toml
@@ -28,6 +28,8 @@ I="keep_selections"
 "A-I"="remove_selections"
 
 [keys.normal.g]
+G="goto_file_end"
+
 n="goto_line_start"
 o="goto_line_end"
 
@@ -73,6 +75,15 @@ E="join_selections"
 I="keep_selections"
 "A-I"="remove_selections"
 
+[keys.select.g]
+G="goto_file_end"
+
+n="goto_line_start"
+o="goto_line_end"
+
+e="move_line_down"
+i="move_line_up"
+
 [keys.normal.z]
 e="scroll_down"
 i="scroll_up"
@@ -80,10 +91,6 @@ i="scroll_up"
 [keys.normal.Z]
 e="scroll_down"
 i="scroll_up"
-
-# [keys.normal]
-# H = "goto_previous_buffer"
-# L = "goto_next_buffer"
 
 [keys.normal.space]
 e = ":run-shell-command ~/.config/yazi/switch-to-yazi.sh"
